crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, vector_search(qs, Utf8("second"), answer)._score                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |   SortPreservingMergeExec: [_score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, _score@1 as _score]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |       SortExec: TopK(fetch=4), expr=[_score@1 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |         AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |           RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |             AggregateExec: mode=Partial, gby=[id@1 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |               ProjectionExec: expr=[_spice.search_field@0 as _spice.search_field, id@2 as id, 1 - cosine_distance([-0.04382492, 0.19985613, -0.068377905, 0.40905398, 0.1309431, 0.21702312, 0.0642606, -0.18392453, 0.12284972, -0.06828425, -0.0779716, 0.056778718, -0.07829621, 0.10319664, -0.11197651, 0.11039854, 0.09313049, -0.070061915, 0.12786311, -0.20297198, -0.31963778, 0.19160584, -0.04126136, -0.12979488, -0.21349913, 0.014369582, 0.16109905, 0.07963909, -0.059627373, 0.09248168, 0.08046214, -0.08955392, -0.05280622, -0.00020613502, 0.09901353, -0.00047575484, 0.00530375, -0.008682349, 0.1454975, -0.032802712, 0.03310448, 0.070386834, 0.021913093, -0.09729417, 0.05027146, 0.0089793345, 0.22016789, -0.06972855, 0.039434433, -0.009187016, 0.12028582, -0.14222503, 0.19971755, 0.0038485164, 0.051273923, 0.090958565, -0.027466344, -0.12448798, -0.15614094, -0.09367188, 0.072442465, 0.055005666, 0.11039197, -0.12741841], answer_embedding@1) as _score] |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
