crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_vector_search_sql_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 612,
    "answer": "1. Perform the division: \\(4 \\div 10 = 0.4\\).  \n2. The decimal \\(0.4\\) is expressed in words as \\(\\boxed{\\text{four tenths}}\\).",
    "question": "Perform the division \\(4 \\div 10\\) and express the resulting decimal in words.",
    "subject": "math",
    "_score": 0.79
  },
  {
    "id": 349,
    "answer": "The missing factor is \\(\\boxed{2}\\).  \n\n(Explanation: Since \\( 21 \\times 2 = 42 \\), the missing factor is 2.)",
    "question": "Find the missing factor in the equation: \\( 42 = 21 \\times \\,? \\).",
    "subject": "math",
    "_score": 0.78
  },
  {
    "id": 948,
    "answer": "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "question": "What is the fifth root of 32?",
    "subject": "math",
    "_score": 0.55
  },
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "question": "Which base number, when raised to the fifth power, equals thirty-two?",
    "subject": "math",
    "_score": 0.55
  }
]
