crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                                                               |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, fetch=4                                                                          |
|               |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer)._score                                         |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, subject]                                                                     |
| physical_plan | ProjectionExec: expr=[subject@0 as subject]                                                                                                                 |
|               |   SortExec: TopK(fetch=4), expr=[_score@1 DESC], preserve_partitioning=[false]                                                                              |
|               |     ProjectionExec: expr=[subject@2 as subject, _score@1 as _score]                                                                                         |
|               |       HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[id@0, _score@1, subject@3]          |
|               |         CoalescePartitionsExec                                                                                                                              |
|               |           AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score] |
|               |             RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                               |
|               |               AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]      |
|               |                 ProjectionExec: expr=[union_extract(json_get(key@0, id), int) as id, 1 - distance@1 as _score]                                              |
|               |                   BytesProcessedExec                                                                                                                        |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                    |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                          |
|               |         SchemaCastScanExec                                                                                                                                  |
|               |           BytesProcessedExec                                                                                                                                |
|               |             DataSourceExec: partitions=1, partition_sizes=[1]                                                                                               |
|               |                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------+
