crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_vector_search_sql_vectors.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 612,
    "answer": "1. Perform the division: \\(4 \\div 10 = 0.4\\).  \n2. The decimal \\(0.4\\) is expressed in words as \\(\\boxed{\\text{four tenths}}\\).",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 64,
    "_score": 0.89
  },
  {
    "id": 349,
    "answer": "The missing factor is \\(\\boxed{2}\\).  \n\n(Explanation: Since \\( 21 \\times 2 = 42 \\), the missing factor is 2.)",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 64,
    "_score": 0.89
  },
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 64,
    "_score": 0.77
  },
  {
    "id": 948,
    "answer": "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 64,
    "_score": 0.77
  }
]
